--- a/api/build.xml
+++ b/api/build.xml
@@ -12,9 +12,9 @@
     </description>
 
     <!-- properties -->
-    <property name="release.spec.title"    value="Pre-FCS Final Approval Ballot"/>
+    <property name="release.spec.title"    value="Final Release"/>
     <property name="release.spec.version"  value="2.0"/>
-    <property name="release.spec.date"     value="March 28, 2006"/>
+    <property name="release.spec.date"     value="April 19, 2006"/>
     <property name="release.spec.feedback" value="jsr224-spec-comments@sun.com"/>
 
     <!-- libraries that are referenced when compiling Java source files -->
