--- a/api/build.xml
+++ b/api/build.xml
@@ -14,7 +14,7 @@
     <!-- properties -->
     <property name="release.spec.title"    value="Maintenance Review"/>
     <property name="release.spec.version"  value="2.1"/>
-    <property name="release.spec.date"     value="August 10, 2006"/>
+    <property name="release.spec.date"     value="August 15, 2006"/>
     <property name="release.spec.feedback" value="jsr224-spec-comments@sun.com"/>
 
     <!-- libraries that are referenced when compiling Java source files -->
@@ -103,7 +103,7 @@ JAX-WS ${release.spec.version} Runtime Library</h2>
 ${release.spec.title} specification, ${release.spec.date}<br>
 Comments to: <i><a href='mailto:${release.spec.feedback}'>${release.spec.feedback}</a></i><br>
 More information at: <i><a target='_top'
-href='http://java.sun.com/xml/jax-ws'>http://java.sun.com/xml/jax-ws</a></i><br>
+href='http://java.sun.com/webservices/jaxws/'>http://java.sun.com/webservices/jaxws/</a></i><br>
 &nbsp;<br>&nbsp;<br><hr width='65%'><h1>${release.spec.title}</h1><hr width='75%'>
 <br>&nbsp;<br>]]>
             </doctitle>
