--- a/api/build.xml
+++ b/api/build.xml
@@ -21,6 +21,7 @@
     <path id="javac.classpath">
         <pathelement path="lib/jaxb-api.jar" />
         <pathelement path="lib/saaj-api.jar" />
+        <pathelement path="lib/jsr173_api.jar" />
     </path>
 
     <!-- libraries that are referenced when generating docs -->
@@ -28,6 +29,7 @@
         <pathelement path="build/classes" />
         <pathelement path="lib/jaxb-api.jar" />
         <pathelement path="lib/saaj-api.jar" />
+        <pathelement path="lib/jsr173_api.jar" />
     </path>
 
     <!-- prepare to build -->
