--- a/api/build.xml
+++ b/api/build.xml
@@ -12,7 +12,7 @@
     </description>
 
     <!-- properties -->
-    <property name="release.spec.title"    value="Maintenance Review Draft"/>
+    <property name="release.spec.title"    value="Maintenance Review Draft Candidate"/>
     <property name="release.spec.version"  value="2.1"/>
     <property name="release.spec.date"     value="October 6, 2006"/>
     <property name="release.spec.feedback" value="jsr224-spec-comments@sun.com"/>
