--- a/api/build.xml
+++ b/api/build.xml
@@ -12,9 +12,9 @@
     </description>
 
     <!-- properties -->
-    <property name="release.spec.title"    value="Proposed Revised Maintenance Release"/>
+    <property name="release.spec.title"    value="Maintenance Review Draft"/>
     <property name="release.spec.version"  value="2.1"/>
-    <property name="release.spec.date"     value="March 9, 2007"/>
+    <property name="release.spec.date"     value="March 13, 2007"/>
     <property name="release.spec.feedback" value="jsr224-spec-comments@sun.com"/>
 
     <!-- libraries that are referenced when compiling Java source files -->
