--- a/api/pom.xml
+++ b/api/pom.xml
@@ -86,25 +86,27 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.4</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.soap</groupId>
             <artifactId>saaj-api</artifactId>
-            <version>1.3.3</version>
+            <version>1.3.4</version>
         </dependency>
-<!--
+
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.annotation</artifactId>
             <version>3.1.1-b06</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>javax.jws</groupId>
             <artifactId>jsr181-api</artifactId>
             <version>1.0-MR1</version>
+            <scope>runtime</scope>
         </dependency>
--->
+
     </dependencies>
 
     <properties>
