--- a/api/pom.xml
+++ b/api/pom.xml
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.annotation</artifactId>
-            <version>3.1.1-b06</version>
+            <version>3.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
