--- a/api/pom.xml
+++ b/api/pom.xml
@@ -91,19 +91,19 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.2.4</version>
+            <version>2.2.7</version>
         </dependency>
 
         <dependency>
             <groupId>javax.xml.soap</groupId>
-            <artifactId>saaj-api</artifactId>
-            <version>1.3.4</version>
+            <artifactId>javax.xml.soap-api</artifactId>
+            <version>1.3.5</version>
         </dependency>
 
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>1.2-b01</version>
+            <version>1.2-b03</version>
             <scope>runtime</scope>
         </dependency>
         
@@ -117,9 +117,11 @@
 
     <properties>
         <release.spec.title>Maintenance Release</release.spec.title>
-        <release.spec.version>2.2</release.spec.version>
         <release.spec.date>Jun 15, 2010</release.spec.date>
         <release.spec.feedback>jsr224-spec-comments@sun.com</release.spec.feedback>
+
+        <extension.name>javax.xml.ws</extension.name>
+        <spec.version>1.1</spec.version>
     </properties>
 
     <build>
@@ -138,6 +140,59 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Extension-Name>javax.xml.ws</Extension-Name>
+                        </manifestEntries>
+                        <manifest>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <!-- Configure maven-bundle-plugin which takes care of
+                     OSGi packaging -->
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.7</version>
+                <!-- We don't use extensions as this interfers with
+                     HK2 and that results in hk2 artifacts
+                     being copied as .hk2-jar. Instead, we configure the
+                     plugin to run as part of package phase. By Sahoo.
+                <extensions>true</extensions>
+                -->
+                <configuration>
+                    <supportedProjectTypes>
+                        <supportedProjectType>jar</supportedProjectType>
+                        <supportedProjectType>bundle</supportedProjectType>
+                    </supportedProjectTypes>
+                    <instructions>
+                        <!-- embed all compile and runtime scope dependencies -->
+                        <!--<Embed-Dependency>*;scope=compile;inline=true</Embed-Dependency>-->
+                        <Export-Package>${extension.name}.*; version=${spec.version}</Export-Package>
+                        <DynamicImport-Package>org.glassfish.hk2.osgiresourcelocator</DynamicImport-Package>
+                        <_include>-osgi.bundle</_include>
+                    </instructions>
+                    <!--<unpackBundle>true</unpackBundle>-->
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>osgi-bundle</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>bundle</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>            
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
                     <mavenExecutorId>forked-path</mavenExecutorId>
@@ -148,7 +203,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.8.1</version>
                 <configuration>
                     <groups>
                         <group>
@@ -156,10 +211,10 @@
                             <packages>javax.xml*</packages>
                         </group>
                     </groups>
-                    <windowtitle>JAX-WS ${release.spec.version}</windowtitle>
+                    <windowtitle>JAX-WS ${spec.version}</windowtitle>
                     <doctitle>
 <![CDATA[<br>
-JAX-WS ${release.spec.version} Runtime Library</h2>
+JAX-WS ${spec.version} Runtime Library</h2>
 ${release.spec.title} specification, ${release.spec.date}<br>
 Comments to: <i><a href='mailto:${release.spec.feedback}'>${release.spec.feedback}</a></i><br>
 More information at: <i><a target='_top'
@@ -167,7 +222,7 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'>Metro Web Se
 &nbsp;<br>&nbsp;<br><hr width='65%'><h1>${release.spec.title}</h1><hr width='75%'>
 <br>&nbsp;<br>]]>
                     </doctitle>
-                    <header><![CDATA[JAX-WS<br>v${release.spec.version}]]></header>
+                    <header><![CDATA[JAX-WS<br>v${spec.version}]]></header>
                     <bottom>
 <![CDATA[<font size=-1>
 <br>Comments to: <a href='mailto:${release.spec.feedback}'><i>${release.spec.feedback}</i></a>
@@ -176,6 +231,13 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web
 <br>Copyright &copy; 2005, 2011, Oracle and/or its affiliates. All rights reserved.
 </font>]]>
                     </bottom>
+                    <detectJavaApiLink>false</detectJavaApiLink>
+                    <offlineLinks>
+                        <offlineLink>
+                            <url>http://download.oracle.com/javase/6/docs/api/</url>
+                            <location>${basedir}/offline-javadoc</location>
+                        </offlineLink>
+                    </offlineLinks>                
                 </configuration>
                 <executions>
                     <execution>
@@ -188,4 +250,35 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web
             </plugin>
         </plugins>
     </build>
+    
+    <profiles>
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.1</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    
 </project>
