--- a/api/pom.xml
+++ b/api/pom.xml
@@ -49,7 +49,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>javax.xml.ws</groupId>
     <artifactId>jaxws-api</artifactId>
-    <version>2.2.11-SNAPSHOT</version>
+    <version>2.2.10-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JAX-WS API</name>
@@ -145,6 +145,16 @@
                         <haltOnFailure>true</haltOnFailure>
                     </check>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>deploy</phase>
+                        <goals><goal>jar-no-fork</goal></goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -245,7 +255,7 @@
                     </execution>
                 </executions>
             </plugin>            
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
