--- a/api/pom.xml
+++ b/api/pom.xml
@@ -49,7 +49,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>javax.xml.ws</groupId>
     <artifactId>jaxws-api</artifactId>
-    <version>2.2.11-SNAPSHOT</version>
+    <version>2.2.10-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JAX-WS API</name>
@@ -176,6 +176,13 @@
                     <artifactId>maven-bundle-plugin</artifactId>
                     <version>2.3.7</version>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.1.2</version>
+                </plugin>
+
             </plugins>
         </pluginManagement>
 
@@ -341,6 +348,19 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
