--- a/api/pom.xml
+++ b/api/pom.xml
@@ -49,7 +49,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>javax.xml.ws</groupId>
     <artifactId>jaxws-api</artifactId>
-    <version>2.2.11-SNAPSHOT</version>
+    <version>2.2.10-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JAX-WS API</name>
@@ -138,6 +138,7 @@
                     <version>2.5.1</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>2.2.1</version>
                 </plugin>
@@ -179,11 +180,12 @@
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>2.1.2</version>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>1.2</version>
                 </plugin>
 
             </plugins>
+
         </pluginManagement>
 
         <plugins>
@@ -367,5 +369,4 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web
             </plugin>
         </plugins>
     </build>
-
 </project>
