findbugs configuration aligned with jdk8

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -139,7 +139,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
-                    <version>2.5.2</version>
+                    <version>3.0.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.glassfish.copyright</groupId>
@@ -205,7 +205,7 @@
                     <threshold>${findbugs.threshold}</threshold>
                     <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
                     <excludeFilterFile>
-                        exclude-common.xml,${findbugs.exclude}
+                        ${findbugs.exclude}
                     </excludeFilterFile>
                     <fork>true</fork>
                     <jvmArgs>-Xms64m -Xmx256m</jvmArgs>
