--- a/api/pom.xml
+++ b/api/pom.xml
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>javax.xml.soap</groupId>
             <artifactId>javax.xml.soap-api</artifactId>
-            <version>1.3.5</version>
+            <version>1.3.8-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
