--- a/api/pom.xml
+++ b/api/pom.xml
@@ -113,8 +113,8 @@
 
         <extension.name>javax.xml.ws</extension.name>
         <spec.version>2.3</spec.version>
-        <jaxb.version>2.3.0-SNAPSHOT</jaxb.version>
-        <soap.version>1.3.8-SNAPSHOT</soap.version>
+        <jaxb.version>2.3.0-b161101.1759</jaxb.version>
+        <soap.version>1.3.8</soap.version>
         
         <non.final>false</non.final>        
 
