METRO-192: fix versioning

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -120,7 +120,7 @@
 
         <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
         <findbugs.threshold>Low</findbugs.threshold>
-        <maven.build.timestamp.format>yyMMdd.HHmm</maven.build.timestamp.format>
+        <maven.build.timestamp.format>yyMMddHHmm</maven.build.timestamp.format>
     </properties>
 
     <build>
@@ -318,8 +318,7 @@
                     <mavenExecutorId>forked-path</mavenExecutorId>
                     <useReleaseProfile>false</useReleaseProfile>
                     <arguments>${release.arguments}</arguments>
-                    <releaseVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-b${maven.build.timestamp}</releaseVersion>
-                    <tag>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-b${maven.build.timestamp}</tag>
+                    <releaseVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.b${maven.build.timestamp}</releaseVersion>
                     <developmentVersion>${pom.version}</developmentVersion>
                 </configuration>
             </plugin>
